# Kalman-and-Bayesian-Filters-in-Python

./: .gitignore  01-g-h-filter.ipynb  08-Designing-Kalman-Filters.ipynb  pyproject.toml
babetCode/: 01-g-h-filter-notes.py  01-g-h-filter-notes_copy.py  book_reader.py  chap_note_utils.py  ipynb-to-htmlJSON.py  utils.py
babetCode/html_files/: 00-Preface.html  01-g-h-filter.html  02-Discrete-Bayes.html  03-Gaussians.html  04-One-Dimensional-Kalman-Filters.html  05-Multivariate-Gaussians.html  06-Multivariate-Kalman-Filters.html  07-Kalman-Filter-Math.html  08-Designing-Kalman-Filters.html  09-Nonlinear-Filtering.html  10-Unscented-Kalman-Filter.html  11-Extended-Kalman-Filters.html  12-Particle-Filters.html  13-Smoothing.html  14-Adaptive-Filtering.html  Appendix-A-Installation.html  Appendix-B-Symbols-and-Notations.html  Appendix-D-HInfinity-Filters.html  Appendix-E-Ensemble-Kalman-Filters.html  Appendix-G-Designing-Nonlinear-Kalman-Filters.html  Appendix-H-Least-Squares-Filters.html  Appendix-I-Analytic-Evaluation-of-Performance.html
babetCode/layouts/: book_iframes.grid.json
babetCode/marimo-chapters/: 00-Preface.py  01-g-h-filter.py  02-Discrete-Bayes.py  03-Gaussians.py  04-One-Dimensional-Kalman-Filters.py  05-Multivariate-Gaussians.py  06-Multivariate-Kalman-Filters.py  07-Kalman-Filter-Math.py  08-Designing-Kalman-Filters.py  09-Nonlinear-Filtering.py  10-Unscented-Kalman-Filter.py  11-Extended-Kalman-Filters.py  12-Particle-Filters.py  13-Smoothing.py  14-Adaptive-Filtering.py  Appendix-A-Installation.py  Appendix-B-Symbols-and-Notations.py  (+6 more)
(+39 files in other folders)
