[project]
name = "kalman-and-bayesian-filters-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "filterpy>=1.4.5",
    "hypothesis>=6.155.7",
    "jupyter>=1.1.1",
    "marimo>=0.23.10",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "numpy>=2.4.6",
    "ruff>=0.15.19",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]
